# myk-tracker

./: CMakeLists.txt  README.md
devices/lcdsysinfo/: osc_to_lcdsysinfo.py  pylcdsysinfo.py  test_display_string.py  test_osc_client.py
devices/powermate_to_osc/: powermate_to_lcdsysinfo_osc.cpp  powermate_to_osc.cpp
doc/: gui-schematic.xopp
libs/: httplib.h
src/: ArpeggiatorMachine.cpp  ArpeggiatorMachine.h  ClockAbs.h  DelayFxMachine.cpp  DelayFxMachine.h  Gui.cpp  Gui.h  HTTPServer.cpp  HTTPServer.h  HttpFetchPerf.cpp  MachineInterface.h  MachineUtilsAbs.h  MidiUtils.cpp  MidiUtils.h  MidiUtilsAbs.h  Palette.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PolyArpeggiatorMachine.cpp  PolyArpeggiatorMachine.h  RaggedTableComponent.cpp  RaggedTableComponent.h  SamplePlayer.cpp  SamplePlayer.h  SamplerEngine.cpp  SamplerEngine.h  Segment14Geometry.h  Sequencer.cpp  Sequencer.h  SequencerCommands.cpp  SequencerCommands.h  SequencerEditor.cpp  SequencerEditor.h  SequencerUtils.cpp  SequencerUtils.h  SimpleClock.h  StringTable.cpp  StringTable.h  (+25 more)
src/hardware_emulator/: Main.cpp  MainComponent.cpp  MainComponent.h
src/machines/: ArpeggiatorMachine.cpp  AudioEffectMachine.h  AuxReverbMachine.cpp  AuxReverbMachine.h  ChannelStripMachine.cpp  ChannelStripMachine.h  DelayFxMachine.cpp  PolyArpeggiatorMachine.cpp  PolyArpeggiatorMachine.h  WaveshaperDistortionMachine.cpp  WaveshaperDistortionMachine.h  WavetableSynthMachine.cpp  WavetableSynthMachine.h
src/standalone/: TrackerStandaloneHost.cpp  TrackerStandaloneHost.h
ui/: app.js  fetch-perf-console.js  fetch-perf.js  index.html  palette-amber-teal.css  palette-neon-purple.css  styles.css
